readiness-app/force-app/main/default/objects/inc_APIUser_Keys__mdt/inc_APIUser_Keys__mdt.object-meta.xml
<CustomObject>
    <description>Stores Access key and access secret which is used for generating access and refresh tokens for report API&#39;s calls.</description>
    <label>inContact API User Keys</label>
    <pluralLabel>inContact API User Keys</pluralLabel>
</CustomObject>