readiness-app/force-app/main/default/objects/inc_APIUser_Keys__mdt/fields/accessKeyId__c.field-meta.xml
<CustomField>
    <fullName>accessKeyId__c</fullName>
    <description>accessKeyId</description>
    <label>accessKeyId</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>