readiness-app/force-app/main/default/objects/inc_APIUser_Keys__mdt/fields/accessKeySecret__c.field-meta.xml
<CustomField>
    <fullName>accessKeySecret__c</fullName>
    <description>accessKeySecret</description>
    <label>accessKeySecret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>