readiness-app/force-app/main/default/objects/inc_APIUser_Keys__mdt/fields/resourceUrl__c.field-meta.xml
<CustomField>
    <fullName>resourceUrl__c</fullName>
    <description>Resource URL used in API calls. Don&#39;t modify it.</description>
    <label>Resource URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>