readiness-app/force-app/main/default/objects/inc_APIUser_Keys__mdt/fields/UH_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>UH_Base_URL__c</fullName>
    <description>User Hub Base URL for calling get access token API</description>
    <inlineHelpText>User Hub Base URL</inlineHelpText>
    <label>UH Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>